<resources>
    <string name="app_name">Login-Registration_Module</string>

    <string name="sign_up">SIGN UP</string>
    <string name="agree_message">By creating an account, you agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="med">MED</string>
    <string name="neo">NEO </string>
    <string name="password">Password</string>
</resources>