<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".Signup">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/neo"
                android:textColor="@color/colorBlack"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/med"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_txt"
            android:layout_below="@id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="28dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_black"
            android:text="@string/signup"
            android:textColor="#515C6F"
            android:textSize="38sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/login_txt"
            android:background="@color/colorWhite"
            android:layout_margin="24dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="8dp"
                        android:layout_gravity="center"
                        android:src="@drawable/mail"/>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_bg"
                        android:paddingHorizontal="8dp"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorWhite"
                            android:fontFamily="@font/roboto_medium"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="8dp"
                         android:layout_gravity="center"
                         android:src="@drawable/password"/>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:paddingHorizontal="8dp"
                        app:startIconDrawable="@drawable/profile">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userFullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorWhite"
                            android:fontFamily="@font/roboto_medium"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp">


                        </com.google.android.material.textfield.TextInputEditText>
                        <!-- <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorPrimary"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="4dp"
                             android:fontFamily="@font/roboto_bold"
                             android:text="FORGOT"
                             android:textSize="16sp" />-->


                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="8dp"
                         android:layout_gravity="center"
                         android:src="@drawable/password"/>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true"
                        android:paddingHorizontal="8dp"
                        app:startIconDrawable="@drawable/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:maxLength="30"
                            android:background="@color/colorWhite"
                            android:inputType="textPassword"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" >


                        </com.google.android.material.textfield.TextInputEditText>
                        <!-- <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorPrimary"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="4dp"
                             android:fontFamily="@font/roboto_bold"
                             android:text="FORGOT"
                             android:textSize="16sp" />-->


                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    &lt;!&ndash; <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="8dp"
                         android:layout_gravity="center"
                         android:src="@drawable/password"/>&ndash;&gt;

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:paddingHorizontal="8dp"
                        app:startIconDrawable="@drawable/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorWhite"
                            android:inputType="textPassword"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" >

                        </com.google.android.material.textfield.TextInputEditText>
                        &lt;!&ndash; <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorPrimary"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="4dp"
                             android:fontFamily="@font/roboto_bold"
                             android:text="FORGOT"
                             android:textSize="16sp" />&ndash;&gt;


                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/signUp_Btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/login_card"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="25sp"
            app:contentPadding="10dp"
            android:onClick="SignUp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"/>

          <!--  <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:src="@drawable/next_btn"/>-->

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp_Btn"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dontHaveAccount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_message"
                android:layout_gravity="center"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/terms_of_service"
                    android:onClick="createAccount"
                    android:layout_gravity="center"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" &amp; "
                    android:onClick="createAccount"
                    android:layout_gravity="center"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/privacy_policy"
                    android:onClick="createAccount"
                    android:layout_gravity="center"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
